--- a/teste_quaest.ipynb
+++ b/teste_quaest.ipynb
@@ -870,7 +870,7 @@
     }
    ],
    "source": [
-    "# boxplot com idade ente sexos\n",
+    "# boxplot com idade e sexos\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(8,5))\n",
     "plot = sns.boxplot(x='Sexo', y='Idade', data=dados)\n",
@@ -894,7 +894,7 @@
     }
    ],
    "source": [
-    "# boxplot com idade ente sexos\n",
+    "# boxplot com renda média familiar e sexos\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(8,5))\n",
     "plot = sns.boxplot(x='Sexo', y='Renda média familiar', data=dados)\n",
@@ -941,7 +941,7 @@
     }
    ],
    "source": [
-    "# boxplot com idade ente escolaridade\n",
+    "# boxplot com idade e escolaridade\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(22,5))\n",
     "plot = sns.boxplot(x='Escolaridade', y='Idade', data=dados, order=ordem)\n",
@@ -967,6 +967,8 @@
     }
    ],
    "source": [
+    "# # boxplot com renda média familiar e escolaridade\n",
+    "\n",
     "fig, ax = plt.subplots(figsize=(22,5))\n",
     "plot = sns.boxplot(x='Escolaridade', y='Renda média familiar', data=dados, order=ordem)\n",
     "plot.set_title('Escolaridade X Renda média familiar');\n",
@@ -1007,7 +1009,7 @@
     }
    ],
    "source": [
-    "# boxplot com idade ente avaliação do governo\n",
+    "# boxplot com idade e avaliação do governo\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(20,5))\n",
     "plot = sns.boxplot(x='Avaliação do governo', y='Idade', data=dados, order=ordem)\n",
@@ -1076,7 +1078,7 @@
     }
    ],
    "source": [
-    "# boxplot com canditatos e idade\n",
+    "# boxplot com intenção de voto e idade\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(20,5))\n",
     "plot = sns.boxplot(x='Intenção de voto', y='Idade', data=dados_plot, order=ordem)\n",
